--- a/app/front/app/search/assets/index.html
+++ b/app/front/app/search/assets/index.html
@@ -8,6 +8,8 @@
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="/stylesheets/app.css">
   <script src="/javascripts/vendor.js"></script>
+  <script src="/javascripts/lib/d3/d3.js"></script>
+  <script src="/javascripts/d3.layout.cloud.js"></script>
   <script src="/javascripts/app.js"></script>
 </head>
 <body>
