--- a/app/front/app/search/assets/index.html
+++ b/app/front/app/search/assets/index.html
@@ -9,8 +9,10 @@
   <link rel="stylesheet" href="/stylesheets/app.css">
   <script src="/javascripts/vendor.js"></script>
   <script src="/javascripts/lib/d3/d3.js"></script>
-  <script src="/javascripts/d3.layout.cloud.js"></script>
-  <script src="/javascripts/Chart.js"></script>
+  <script src="/javascripts/lib/d3.layout.cloud.js"></script>
+  <script src="/javascripts/lib/Chart.min.js"></script>
+  <script src="/javascripts/lib/vex.min.js"></script>
+  <script src="/javascripts/lib/vex.dialog.min.js"></script>
   <script src="/javascripts/app.js"></script>
 </head>
 <body>
